compiler/tests/ar/errors/pure_write_param.salam
// لغة: العربية
// توقع: E013
نقي دالة كتابة قيمة(مؤشر : صحيح٦٤*, قيمة : صحيح٦٤) : صحيح٦٤:
    مؤشر[0] = قيمة
    أرجع قيمة
نهاية

دالة الرئيسية:
    اطبع(1)
نهاية
